# need-hug

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh  setupHooks.sh  setup_workspace.sh
CMake/: mz_project_wrapper.cmake
ProjectSettings/: ProjectSettings.asset
ext/: CMakeLists.txt
need-hug/: CMakeLists.txt
need-hug-lib/: CMakeLists.txt
need-hug-lib-test/: CMakeLists.txt
need-hug-lib-test/cpp/: PointerTest.cpp
need-hug-lib-test/hpp/: ReturnCodeConverterTest.hpp
need-hug-lib-test/include/: ReturnCodeConverterTest.hpp
need-hug-lib-test/include/context/: TimeHandlerTest.hpp
need-hug-lib-test/src/: ReturnCodeConverterTest.cpp
need-hug-lib-test/src/context/: ContextTest.cpp  TimeHandlerTest.cpp
need-hug-lib-test/src/event/: EventManagerTest.cpp
need-hug-lib/cpp/: Entity.cpp  NeedHugContext.cpp  NeedHugGame.cpp  ReturnCodeConverter.cpp
need-hug-lib/cpp/components/: Transform.cpp
need-hug-lib/hpp/: NeedHugContext.hpp  NeedHugGame.hpp
need-hug-lib/hpp/Context/: NeedHugContext.hpp
need-hug-lib/hpp/ReturnCode/: ReturnCodeConverter.hpp
need-hug-lib/hpp/components/: Component.hpp  Transform.hpp
need-hug-lib/hpp/ecs/: Entity.hpp
need-hug-lib/include/: NeedHugGame.hpp
need-hug-lib/include/Context/: NeedHugContext.hpp
need-hug-lib/include/ReturnCode/: ReturnCodeConverter.hpp
need-hug-lib/include/component/: ComponentManager.hpp
need-hug-lib/include/components/: BaseComponent.hpp  Component.hpp  Transform.hpp
need-hug-lib/include/configuration/: ConfigurationData.hpp  ConfigurationManager.hpp  InputConfiguration.hpp
need-hug-lib/include/context/: InputHandler.hpp  KeyMap.hpp  NeedHugContext.hpp  TimeHandler.hpp
need-hug-lib/include/ecs/: Entity.hpp  System.hpp  SystemManager.hpp
need-hug-lib/include/event/: EventBox.hpp  EventManager.hpp  EventProcessor.hpp
need-hug-lib/include/events/: BaseEvent.hpp  EventBox.hpp  EventProcessor.hpp  MailBox.hpp
need-hug-lib/include/input/: ActionType.hpp  ConstraintSolver.hpp  InputHandler.hpp  InputManager.hpp  KeyMap.hpp  PlayerId.hpp  StringToSFMLKey.hpp  bindings.hpp
need-hug-lib/include/input/button/: Button.hpp  ButtonFactory.hpp  Constraint.hpp  SFMLButton.hpp
need-hug-lib/include/return_code/: ReturnCode.hpp  ReturnCodeConverter.hpp  ReturnCodeInfo.hpp
need-hug-lib/include/window/: Window.hpp
need-hug-lib/src/: NeedHugContext.cpp  NeedHugGame.cpp  ReturnCodeConverter.cpp
need-hug-lib/src/components/: Transform.cpp
need-hug-lib/src/configuration/: ConfigurationManager.cpp  InputConfiguration.cpp
need-hug-lib/src/context/: InputHandler.cpp  NeedHugContext.cpp  TimeHandler.cpp
need-hug-lib/src/ecs/: Entity.cpp  System.cpp  SystemManager.cpp
need-hug-lib/src/event/: EventBox.cpp  EventManager.cpp  MailBox.cpp
need-hug-lib/src/events/: EventBox.cpp  MailBox.cpp
need-hug-lib/src/input/: InputHandler.cpp  InputManager.cpp
need-hug-lib/src/input/button/: Button.cpp  ButtonFactory.cpp  SFMLButton.cpp
need-hug-lib/src/window/: Window.cpp
need-hug-lib/test-src/: ReturnCodeConverterTest.cpp
need-hug-lib/test-src/context/: TimeHandlerTest.cpp
need-hug-lib/test-src/event/: EventManagerTest.cpp
need-hug-lib/test-src/ext/: JsonTest.cpp
need-hug-native/: CMakeLists.txt
need-hug-native-test/: CMakeLists.txt
need-hug-test/: CMakeLists.txt
need-hug-unity/Assets/Scenes/: FirstScene.unity
need-hug/cpp/: Main.cpp
need-hug/src/: Main.cpp
scripts/format/: find_clang_format.sh  fromCache.sh
scripts/githooks/pre-commit-script/: format-cpp.sh  pre-commit
