cmake_minimum_required(VERSION 3.7)


## SFML paths and libs
set(SFML_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/ext/SFML/include PARENT_SCOPE)
set(SFML_OUTPUT_FOLDER ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} PARENT_SCOPE)
if(WIN32)
	set(SFML_OUTPUT_FOLDER ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}$<$<CONFIG:DEBUG>:/debug>$<$<CONFIG:RELEASE>:/release>)
endif()

if(WIN32)
	set(SFML_LIBRARIES_DEBUG ${SFML_OUTPUT_FOLDER}/sfml-system-d.lib ${SFML_OUTPUT_FOLDER}/sfml-graphics-d.lib  ${SFML_OUTPUT_FOLDER}/sfml-window-d.lib PARENT_SCOPE)
	set(SFML_LIBRARIES_RELEASE ${SFML_OUTPUT_FOLDER}/sfml-system.lib ${SFML_OUTPUT_FOLDER}/sfml-graphics.lib  ${SFML_OUTPUT_FOLDER}/sfml-window.lib PARENT_SCOPE)
else()
	set(SFML_LIBRARIES_DEBUG ${SFML_OUTPUT_FOLDER}/sfml-system.a ${SFML_OUTPUT_FOLDER}/sfml-graphics.a ${SFML_OUTPUT_FOLDER}/sfml-window.a PARENT_SCOPE)
	set(SFML_LIBRARIES_RELEASE ${SFML_OUTPUT_FOLDER}/sfml-system.a ${SFML_OUTPUT_FOLDER}/sfml-graphics.a  ${SFML_OUTPUT_FOLDER}/sfml-window.a PARENT_SCOPE)
endif()


option(SFML_BUILD_NETWORK OFF)
option(SFML_BUILD_AUDIO OFF)
option(SFML_USE_STATIC_STD_LIBS OFF)

add_subdirectory(SFML)